import org.gradle.nativeplatform.platform.internal.DefaultNativePlatform

plugins {
    id 'java'
    id 'application'
    id "com.github.johnrengelman.shadow" version "8.1.1"
    id 'me.champeau.jmh' version '0.7.2'
}

group 'io.crowds'
version '1.0-SNAPSHOT'

sourceCompatibility = 21
targetCompatibility = 21



java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}



repositories {
    mavenCentral()
}

application{
    mainClass = 'io.crowds.Main'

    applicationDefaultJvmArgs = ["--add-opens=java.base/java.lang.invoke=ALL-UNNAMED","--enable-preview"]
}

compileJava{
    options.compilerArgs = ["--enable-preview"]
}

compileTestJava{
    options.compilerArgs= ["--enable-preview"]
}

tasks.withType(JavaCompile) {
    options.compilerArgs += "--enable-preview"
}
tasks.withType(Test) {
    jvmArgs += "--enable-preview"
}
tasks.withType(JavaExec) {
    jvmArgs += "--enable-preview"
}

task getClassPath {
    doLast {
        println sourceSets.main.compileClasspath.join(";")
    }
}

shadowJar {
    mainClassName = 'io.crowds.Main'
    archiveBaseName.set('ddnsp')
    archiveClassifier.set('')
    archiveVersion.set('')
}

jar {
    manifest {
        attributes 'Main-Class': 'io.crowds.Main'
    }
    archiveBaseName = 'ddnsp-base'
    archiveVersion = ''
}

jmh{
    jvmArgs = ['--enable-preview']
}


dependencies {
    OperatingSystem os = DefaultNativePlatform.currentOperatingSystem;
    Architecture arch= DefaultNativePlatform.currentArchitecture;
    logger.info("os is ${os.toFamilyName()}")
    logger.info("arch is ${arch.name}")
    implementation 'com.maxmind.geoip2:geoip2:3.0.0'
    implementation 'org.bouncycastle:bcprov-jdk18on:1.78.1'
    implementation 'io.vertx:vertx-core:4.5.12'
    implementation 'io.vertx:vertx-web:4.5.12'
    implementation 'io.vertx:vertx-config:4.5.12'
    implementation 'io.vertx:vertx-config-yaml:4.5.12'
    implementation 'ch.qos.logback:logback-core:1.5.13'
    implementation 'ch.qos.logback:logback-classic:1.5.13'

    implementation 'org.apache.sshd:sshd-core:2.11.0'
    implementation 'net.i2p.crypto:eddsa:0.3.0'

    implementation 'org.drasyl:netty-tun:1.2.1'
    implementation "io.netty:netty-transport-native-epoll:4.1.117.Final:linux-${arch.isAmd64()?'x86_64':'aarch_64'}"

    if (os.isWindows()){
        implementation 'io.netty:netty-tcnative-boringssl-static:2.0.69.Final:windows-x86_64'
    }else {
        implementation "io.netty:netty-tcnative-boringssl-static:2.0.69.Final:${os.isLinux()?"linux":"osx"}-${arch.isAmd64()?'x86_64':'aarch_64'}"
    }


    testImplementation group: 'junit', name: 'junit', version: '4.12'
    testImplementation 'org.openjdk.jol:jol-core:0.16'

    testImplementation 'org.openjdk.jmh:jmh-core:1.36'
    testImplementation 'org.openjdk.jmh:jmh-generator-annprocess:1.36'
    testAnnotationProcessor 'org.openjdk.jmh:jmh-generator-annprocess:1.36'

}
